--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "braces": "^2.3.1",
     "react": "16.8.3",
     "react-native": "0.59.8",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-vector-icons": "^6.4.2",
     "styled-components": "^4.2.1"
   },
@@ -23,5 +24,10 @@
   },
   "jest": {
     "preset": "react-native"
+  },
+  "rnpm": {
+    "assets": [
+      "./assets/fonts/"
+    ]
   }
 }
